[gd_scene load_steps=46 format=2]

[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/run.png" type="Texture" id=1]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/charge.png" type="Texture" id=2]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/hit.png" type="Texture" id=3]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/death.png" type="Texture" id=4]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/attack.png" type="Texture" id=5]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/transition to charge.png" type="Texture" id=6]
[ext_resource path="res://Parallax/Asset/Enemy/Ball_guy/idle.png" type="Texture" id=7]
[ext_resource path="res://Parallax/script/Ball_guy.gd" type="Script" id=8]
[ext_resource path="res://Audio/SFX/Ball.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 6, 126, 27 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 45, 126, 27 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 6, 126, 27 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 0, 45, 126, 27 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 84, 126, 27 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 0, 123, 126, 27 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 6, 126, 27 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 0, 45, 126, 27 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 0, 84, 126, 27 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 123, 126, 27 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 162, 126, 27 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 201, 126, 27 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 0, 240, 126, 27 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 0, 279, 126, 27 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 6, 126, 27 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 45, 126, 27 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 0, 7, 126, 26 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 0, 46, 126, 26 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 0, 85, 126, 26 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 0, 124, 126, 26 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 0, 163, 126, 26 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 0, 6, 126, 27 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 0, 45, 126, 27 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 0, 84, 126, 27 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 0, 123, 126, 27 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 0, 162, 126, 27 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 126, 39 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 0, 39, 126, 39 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 78, 126, 39 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 0, 117, 126, 39 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 0, 156, 126, 39 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 0, 195, 126, 39 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 0, 234, 126, 39 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 0, 273, 126, 39 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Damaged",
"speed": 8.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "Death",
"speed": 6.5
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Idle",
"speed": 7.5
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "Running",
"speed": 7.0
} ]

[node name="Ball_guy" type="KinematicBody2D"]
position = Vector2( 2200, 450 )
script = ExtResource( 8 )

[node name="Ball_col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ball_anim" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 4, 4 )
frames = SubResource( 7 )
animation = "Attack"
frame = 4
playing = true

[node name="Swing1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Swing2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="animation_finished" from="Ball_anim" to="." method="_on_Ball_anim_animation_finished"]
